# VimPython

./: .main.py.swp  README.md  before_commit.bash  lorum.txt  main.py  pyproject.toml  run_tests.bash  short_lorum2.txt
vim_python/: keystrokes.py  terminal.py  test_deleting.py  test_moving.py  vim.py
vim_python/test_data/: test_data_TestDeleting.json  test_data_TestMoving.json  test_helper.py
vim_python/vim_exe/: save_state.vim  vim_exe.py
vim_python/vim_exe/test_vim_exe/: lorum.txt  test_vim_exe.bash
