[tool.poetry]
name = "vimpython"
version = "0.1.0"
description = ""
authors = ["Mike <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
deepdiff = "^5.0.2"
progress = "^1.5"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
